fixed float/text align

--- a/public/stylesheets/coke.css
+++ b/public/stylesheets/coke.css
@@ -33,10 +33,10 @@
 }
 
 .login_form span.label {
-	float: right;
+	float: left;
 	height: 30px;
 	margin-left: 3px;
-	text-align: left;
+	text-align: right;
 	vertical-align: middle;
 	width: 75px;
 }
